--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+          <img class="logo" src="https://github.com/diahamanda/i-am-manda/blob/main/Alan%20Walker%20Grafitti.png">
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
